// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-parameters name-and-parameters.js 1`] = `
Object {
  "components": Object {
    "2ee8b0e9e58c6034c09cf994cd086170": Object {
      "name": "ControlsTable",
    },
  },
  "kinds": Object {
    "Story": Object {
      "components": Object {
        "ControlsTable": "2ee8b0e9e58c6034c09cf994cd086170",
      },
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/parameters/name-and-parameters.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
        "name": "@component-controls/instrument",
      },
      "title": "Story",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "component": "ControlsTable",
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 2,
        },
        "start": Object {
          "column": 23,
          "line": 2,
        },
      },
      "name": "myStory",
      "parameters": Object {
        "addonControls": Object {
          "smart": false,
        },
        "component": "ControlsTable",
      },
      "source": "() => {};
",
    },
  },
  "transformed": "export default { title: 'Story' };
export const myStory = () => {};
myStory.story = {
  name: 'Custom story name',
  parameters: {
    component: ControlsTable,
    addonControls: {
      smart: false,
    },
  },
};
",
}
`;

exports[`csf-parameters name-parameters-and-controls.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/parameters/name-parameters-and-controls.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
        "name": "@component-controls/instrument",
      },
      "title": "Story",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 2,
        },
        "start": Object {
          "column": 23,
          "line": 2,
        },
      },
      "name": "myStory",
      "parameters": Object {
        "addonControls": Object {
          "smart": false,
        },
        "controls": Object {
          "name": Object {
            "label": "Name",
            "order": 9999,
            "type": "ControlTypes.TEXT",
            "value": "Mark",
          },
        },
      },
      "source": "() => {};
",
    },
  },
  "transformed": "export default { title: 'Story' };
export const myStory = () => {};
myStory.story = {
  name: 'Custom story name',
  parameters: {
    controls: {
      name: {
        type: ControlTypes.TEXT,
        label: 'Name',
        value: 'Mark',
        order: 9999,
      },
    },
    addonControls: {
      smart: false,
    },
  },
};
",
}
`;

exports[`csf-parameters story-property-name.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/parameters/story-property-name.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
        "name": "@component-controls/instrument",
      },
      "title": "Story",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 2,
        },
        "start": Object {
          "column": 23,
          "line": 2,
        },
      },
      "name": "myStory",
      "source": "() => {};
",
    },
  },
  "transformed": "export default { title: 'Story' };
export const myStory = () => {};
myStory.story = {
  name: 'Custom story name',
};
",
}
`;
